--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://sujith248.github.io/personal-portfolio",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
